<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="calculate">Calculate</string>
    <string name="footer_text" translatable="false">By continuing you accept the Term of Use and Privacy Policy</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="middle_text" translatable="false">Welcome to Clipzy</string>
    <string name="description_middle_text" translatable="false">Clip anything from over 100,000 hot topics</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>