<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/BgIv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-3dp" />



        <ImageView
            android:id="@+id/logoIv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/middleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            app:layout_constraintBottom_toTopOf="@id/startBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoIv" />

        <TextView
            android:id="@+id/descriptionMiddleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_middle_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            app:isBlue="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/middleTv" />

        <EditText
            android:id="@+id/firstEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/descriptionMiddleTv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/selector_btn_default"
            android:padding="16dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/skipTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/skipTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="@dimen/extra_small_text"
            app:layout_constraintBottom_toTopOf="@id/FooterTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/FooterTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/footer_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/extra_small_text"
            app:layout_constraintBottom_toTopOf="@id/secondEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/secondEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>